Add delete meal entry flow
